--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "zoom-clone",
+  "name": "test_p2p",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "7.2.0",
+    "babel-loader": "^8.2.3",
+    "babel-preset-solid": "1.3.6",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "peer": "^0.6.1",
-    "peerjs": "^1.3.2",
-    "socket.io": "^2.3.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "solid-js": "1.3.8",
+    "solid-styled-components": "0.27.6",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   }
 }
