--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-solid": "1.3.6",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "janus-gateway-ts": "^1.0.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "solid-js": "1.3.8",
