--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "socket.io-client": "^4.4.1",
     "solid-js": "1.3.8",
     "solid-styled-components": "0.27.6",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "webrtc-adapter": "^8.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
